--- a/zfront/src/styles/tailwind.css
+++ b/zfront/src/styles/tailwind.css
@@ -3,48 +3,18 @@
 @tailwind utilities;
 
 
-@layer components {
-  .modalField {
-    @apply w-full ml-2 p-1 focus:bg-gray-200 hover:bg-gray-200;
-  }
-}
+@layer components { .modalField { @apply w-full ml-2 p-1 focus:bg-gray-200 hover:bg-gray-200; }}
 
-@layer components {
-  .standardButton {
-    @apply px-3 py-1 mx-2 bg-gray-200 border border-gray-700 rounded-lg shadow-sm
-  }
-}
+@layer components { .standardButton { @apply px-3 py-1 mx-2 bg-gray-200 border border-gray-700 rounded-lg shadow-sm }}
 
 
-@layer components {
-  .stubWrapper {
-    @apply text-xs flex flex-col items-center absolute text-gray-900
-  }
-}
+@layer components { .stubWrapper { @apply text-xs flex flex-col items-center absolute text-gray-900 }}
 
-@layer components {
-  .stub {
-    @apply flex w-60 bg-gray-300 border border-gray-900 rounded-lg opacity-80
-  }
-}
+@layer components { .stub { @apply flex w-60 bg-gray-200 border border-gray-900 rounded-lg opacity-80 }}
 
-@layer components {
-  .stub .fadeOutContainer {
-    @apply w-1/2 h-4 absolute bottom-0 right-0  bg-gradient-to-l from-gray-300
-  }
-}
+@layer components { .stub .fadeOutContainer { @apply w-1/2 h-4 absolute bottom-0 right-0  bg-gradient-to-l from-gray-200 }}
 
-@layer components {
-  .stub .titleContainer {
-    @apply flex flex-col items-start w-3/4 p-3 relative  border-r border-gray-900
-  }
-}
+@layer components { .stub .titleContainer { @apply flex flex-col items-start w-3/4 p-3 relative  border-r border-gray-900 }}
 
-@layer components {
-  .stub .attributeContainer {
-    @apply flex flex-col justify-between items-center w-3/12 p-2 rounded-r-lg
-  }
-}
-
-
+@layer components { .stub .attributeContainer { @apply flex flex-col justify-between items-center w-3/12 p-2 rounded-r-lg }}
 
